Title page and CopyRight page done.

--- a/gamification-in-human-resource-management.tex
+++ b/gamification-in-human-resource-management.tex
@@ -123,19 +123,19 @@
 
 % === Title page ===
 \DepartmentFa{دانشکده مهندسی کامپیوتر}
-\GroupFa{گروه مهندسی نرم‌افزار}
-\ThesisTypeFa{رساله} % Or \ThesisTypeFa{پایان‌نامه} Or \ThesisTypeFa{پیشنهادیه پایان‌نامه}
-\DegreeFa{دکتری} % Or \DegreeFa{کارشناسی ارشد}
-\FieldFa{رشته‌ی مهندسی کامپیوتر}
-\BranchFa{ نرم‌افزار}   % This is نام گرایش
-\YourFullnameFa{نام و نام خانوادگی دانشجو}
-\FirstSupervisorFa{نام و نام خانوادگی استاد راهنما}
-\YearFa{ماه سال}
-\TitleFa{عنوان رساله}
-% \MakeTitlePage
+\GroupFa{گروه فناوری اطلاعات}
+\ThesisTypeFa{پروژه}
+\DegreeFa{کارشناسی ارشد}
+\FieldFa{فناوری اطلاعات}
+\BranchFa{تجارت الکترونیکی}
+\YourFullnameFa{***}
+\FirstSupervisorFa{***}
+\YearFa{تیر ۱۴۰۰}
+\TitleFa{بازی‌وارسازی در مدیریت منابع انسانی}
+\MakeTitlePage
 
 % === CopyRight ===
-% \MakeCopyRightPage
+\MakeCopyRightPage
 
 % === Persian Signature ===
 \Prefix{آقای} %\Prefix{خانم}
