Some unimportant sections like CopyRight removed and AbstractFa section added. Numbers should be English.

--- a/gamification-in-human-resource-management.tex
+++ b/gamification-in-human-resource-management.tex
@@ -130,37 +130,13 @@
 \BranchFa{تجارت الکترونیکی}
 \YourFullnameFa{***}
 \FirstSupervisorFa{***}
-\YearFa{تیر ۱۴۰۰}
+\YearFa{تیر 1400}
 \TitleFa{بازی‌وارسازی در مدیریت منابع انسانی}
 \MakeTitlePage
 
-% === CopyRight ===
-\MakeCopyRightPage
-
-% === Persian Signature ===
-\Prefix{آقای} %\Prefix{خانم}
-\DateFa{1396/06/11}
-\ThesisMark{عالی} % \ThesisMark{عالی} Or \ThesisMark{بسیارخوب} Or \ThesisMark{خوب}
-\FirstSupervisorAcademicRank{استادیار} % Or \FirstSupervisorAcademicRank{دانشیار} Or \FirstSupervisorAcademicRank{استاد}
-\FirstExaminerFa{نام و نام خانوادگی داور اول داخلی}
-\FirstExaminerAcademicRank{مرتبه علمی} % Or \FirstExaminerAcademicRank{دانشیار} Or \FirstExaminerAcademicRank{استاد}
-\SecondExaminerFa{نام و نام خانوادگی استاد داور دوم داخلی} % Optional (Remove It If You Don't Have)
-\SecondExaminerAcademicRank{مرتبه علمی} % Or \SecondExaminerAcademicRank{دانشیار} Or \SecondExaminerAcademicRank{استاد}
-\ThirdExaminerFa{نام و نام خانوادگی داور خارج} % Optional (Remove It If You Don't Have)
-\ThirdExaminerAcademicRank{مرتبه علمی} % Or \ThirdExaminerAcademicRank{دانشیار} Or \ThirdExaminerAcademicRank{استاد}
-\FourthExaminerFa{نام و نام خانوادگی داور خارج} % Optional (Remove It If You Don't Have)
-\FourthExaminerAcademicRank{مرتبه علمی} % Or \FourthExaminerAcademicRank{دانشیار} Or \FourthExaminerAcademicRank{استاد}
-% \MakeFarsiSignaturePage
-
-% === Acknowledgments ===
-% \input{Chapters/Acknowledgments}
-
-% === Dedication ===
-% \input{Chapters/Dedication}
-
 % === Persian Abstract ===
-% \input{Chapters/AbstractFa}
-% \MakeFarsiAbstract
+\input{Chapters/AbstractFa}
+\MakeFarsiAbstract
 
 % === Table of Contents/Figures/Tables ===
 \setcounter{page}{0}
