Introduction has been wrote until scenarios.

--- a/gamification-in-human-resource-management.tex
+++ b/gamification-in-human-resource-management.tex
@@ -155,7 +155,7 @@
 \clearpage
 \baselineskip=0.9cm
 \setcounter{footnote}{0}
-% \input{Chapters/Chapter1}
+\input{Chapters/Chapter1}
 % \input{Chapters/Chapter2}
 % \input{Chapters/Chapter3}
 % \input{Chapters/Chapter4}
