Table of contents and table of figures added.

--- a/gamification-in-human-resource-management.tex
+++ b/gamification-in-human-resource-management.tex
@@ -136,8 +136,8 @@
 
 % === Table of Contents/Figures/Tables ===
 \setcounter{page}{0}
-% \MakeTableOfContents
-% \MakeListOfFigures
+\MakeTableOfContents
+\MakeListOfFigures
 % \MakeListOfTables
 % \MakeListOfAlgorithms
 
