--- a/gamification-in-human-resource-management.tex
+++ b/gamification-in-human-resource-management.tex
@@ -153,7 +153,7 @@
 \setcounter{footnote}{0}
 \input{Chapters/Chapter1}
 \input{Chapters/Chapter2}
-% \input{Chapters/Chapter3}
+\input{Chapters/Chapter3}
 % \input{Chapters/Chapter4}
 % \input{Chapters/Chapter5}
 % \input{Chapters/Chapter6}
