--- a/gamification-in-human-resource-management.tex
+++ b/gamification-in-human-resource-management.tex
@@ -154,12 +154,9 @@
 \input{Chapters/Chapter1}
 \input{Chapters/Chapter2}
 \input{Chapters/Chapter3}
-% \input{Chapters/Chapter4}
-% \input{Chapters/Chapter5}
-% \input{Chapters/Chapter6}
 
 % === References ===
-% \MakeReferences{References}
+\MakeReferences{References}
 
 % === Re-Style ===
 % \clearpage
