Citation done. Some coments removed. bluewolf image changed.

--- a/References.bib
+++ b/References.bib
@@ -1,121 +1,294 @@
-
 @article{boudlaie,
-	title = {a Qualitative study of gamification based recruitment process in start ups},
+	title = {a {Qualitative} study of gamification based recruitment process in start ups},
 	volume = {29},
 	issn = {2251-8037},
 	url = {https://jmsd.atu.ac.ir/article_11604.html},
 	doi = {10.22054/jmsd.2020.47159.3434},
 	abstract = {Start ups need the application of new management techniques and concepts. Gamification is considered as a useful tool for organizations and this qualitative research answers the main question of the research wich is that how can build a gamified process in the field of human resources, especially in recruitment section of startups. In this research 12 people are interviewed. These people were experts of human resources and gamification. In relation to primary and secondary themes in the field of gamification design during recruitment process in order to improving the recruitment of proper human force for small and medium startup businesses, 8 primary themes and 21 secondary themes are recognized. 8 primary themes which are effective factors on designing gamified recruitment process for startups are as follows: designing work plan, recognizing the job skills of applicant, examining the job innovation of applicant, developing the technology substructures of organization, characteristics of applicant, recognizing the psychological capital of applicant, recognizing the social capital of applicant, and the applicant`s adjustment ability to job purposes. The final result is a framework for designing a gamified process which is suit for human resources especially in the recruitment section.},
-	pages = {121--148},
 	number = {96},
-	journaltitle = {Management Studies in Development and Evolution},
+	journal = {Management Studies in Development and Evolution},
 	author = {boudlaie, hasan and kenarroodi, mohammadhosein},
-	date = {2020},
+	year = {2020},
 	note = {Publisher: Allameh Tabataba’i University
 \_eprint: https://jmsd.atu.ac.ir/article\_11604\_619f9b147b8e7bc66b8eb8bfa5caa5c0.pdf},
 	keywords = {Gamification, Gamified Recruitment Process, human resources, Key words: Recruitment, Startups},
+	pages = {121--148},
 }
 
 @book{atoz,
-	title = {الف تا ی گیمیفیکیشن},
-	url = {www.mrgamification.com},
-	pagetotal = {36},
-	author = {حاتمی, کامران},
-	date = {2019},
     language = {persian},
+	title = {{الف} تا {ی} گیمیفیکیشن},
+	url = {www.mrgamification.com},
+	author = {حاتمی, کامران},
+	year = {2019},
 }
 
 @article{amiriamin,
+    language = {persian},
 	title = {گیمیفیکیشن؛ رویکردی نوین به مدیریت منابع انسانی},
 	url = {https://www.noormags.ir/view/fa/articlepage/1687401},
-	pages = {1 -- 10},
 	number = {25},
-	journaltitle = {مطالعات کاربردی در علوم مدیریت و توسعه},
+	journal = {مطالعات کاربردی در علوم مدیریت و توسعه},
 	author = {امیری, ‌علی‌اصغر and امین, ‌فرشته and},
-	date = {1399},
-	language = {persian},
+	year = {1399},
+	pages = {1 -- 10},
 }
 
-@video{tedx,
-	title = {Gamification at work {\textbar} Janaki Kumar {\textbar} {TEDxGraz}},
+@misc{tedx,
+	title = {Gamification at work {\textbar} {Janaki} {Kumar} {\textbar} {TEDxGraz}},
 	url = {https://www.youtube.com/watch?v=6wk4dkY-rV0&t=908s},
-	abstract = {This talk was given at a local {TEDx} event, produced independently of the {TED} Conferences. Gamification is a buzzword in business these days. Organizations are turning to gamification to engage their customers and motivate their employees. In this talk, Janaki will address what is gamification? Is it appropriate in the workplace? And what are some best practices that can help you design gamification that works!
+	abstract = {This talk was given at a local TEDx event, produced independently of the TED Conferences. Gamification is a buzzword in business these days. Organizations are turning to gamification to engage their customers and motivate their employees. In this talk, Janaki will address what is gamification? Is it appropriate in the workplace? And what are some best practices that can help you design gamification that works!
 Talk language: English
 
-Janaki Kumar is the Head of Strategic Design Services, America in {SAP}’s Design and Co-Innovation Center. She leads a team of designers who work directly with customers to transform their user experience. She has over a decade of experience building, coaching, and leading high performance teams to deliver design-led innovation. She is the co-author of the book, Gamification at Work – Designing Engaging Business Software. Janaki has a Masters in Information Systems from Boston University. She has authored 20 intellectual property patent applications of innovative user experiences. 
+Janaki Kumar is the Head of Strategic Design Services, America in SAP’s Design and Co-Innovation Center. She leads a team of designers who work directly with customers to transform their user experience. She has over a decade of experience building, coaching, and leading high performance teams to deliver design-led innovation. She is the co-author of the book, Gamification at Work – Designing Engaging Business Software. Janaki has a Masters in Information Systems from Boston University. She has authored 20 intellectual property patent applications of innovative user experiences. 
 
 
-About {TEDx}, x = independently organized event In the spirit of ideas worth spreading, {TEDx} is a program of local, self-organized events that bring people together to share a {TED}-like experience. At a {TEDx} event, {TEDTalks} video and live speakers combine to spark deep discussion and connection in a small group. These local, self-organized events are branded {TEDx}, where x = independently organized {TED} event. The {TED} Conference provides general guidance for the {TEDx} program, but individual {TEDx} events are self-organized.* (*Subject to certain rules and regulations)},
-	author = {{TEDx Talks}},
+About TEDx, x = independently organized event In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TEDTalks video and live speakers combine to spark deep discussion and connection in a small group. These local, self-organized events are branded TEDx, where x = independently organized TED event. The TED Conference provides general guidance for the TEDx program, but individual TEDx events are self-organized.* (*Subject to certain rules and regulations)},
 	urldate = {2021-07-05},
+	author = {{TEDx Talks}},
 }
 
-@video{killer,
-	title = {5 Killer Examples on How Gamification in the Workplace is Reshaping Corporate Training},
+@misc{killer,
+	title = {5 {Killer} {Examples} on {How} {Gamification} in the {Workplace} is {Reshaping} {Corporate} {Training}},
 	url = {https://www.youtube.com/watch?v=IpG7xXaf-nA},
-	abstract = {Gamification always makes learning more engaging and fun. We, at {EI} Design, can show you how you can use Gamification at your workplace to reshape corporate training in 5 killer ways. Before getting into these Gamification strategies, this video provides an overview of the different levels of Gamification practice at {EI} Design. To effectively integrate Gamification strategies into your corporate training, get in touch with us and see your training impact soar.
+	abstract = {Gamification always makes learning more engaging and fun. We, at EI Design, can show you how you can use Gamification at your workplace to reshape corporate training in 5 killer ways. Before getting into these Gamification strategies, this video provides an overview of the different levels of Gamification practice at EI Design. To effectively integrate Gamification strategies into your corporate training, get in touch with us and see your training impact soar.
 
-About {EI} Design 
+About EI Design 
 
-{EI} Design brings in 17 years of expertise servicing customers across 20+ countries catering to their varied {eLearning} needs. We have delivered more than 10,000+ hours of {eLearning} development content (of which over 2000+ hours are for Mobile Learning). We also have a strong expertise in localizing content in 31 global languages. Please visit - https://www.eidesign.net/ to know more.
+EI Design brings in 17 years of expertise servicing customers across 20+ countries catering to their varied eLearning needs. We have delivered more than 10,000+ hours of eLearning development content (of which over 2000+ hours are for Mobile Learning). We also have a strong expertise in localizing content in 31 global languages. Please visit - https://www.eidesign.net/ to know more.
 
-Please do subscribe for more related videos https://www.youtube.com/channel/{UCcJl}...
+Please do subscribe for more related videos https://www.youtube.com/channel/UCcJl...
 
 Find us at https://www.eidesign.net
 
 Connect with us at
-{LinkedIn} ➡ https://www.linkedin.com/in/ei-design...
-Facebook ➡ https://www.facebook.com/{EIDesign}.net/
-Twitter ➡ https://twitter.com/{EIDesignLearn}
-Pinterest ➡ https://in.pinterest.com/{EIDesign}01/},
+LinkedIn ➡ https://www.linkedin.com/in/ei-design...
+Facebook ➡ https://www.facebook.com/EIDesign.net/
+Twitter ➡ https://twitter.com/EIDesignLearn
+Pinterest ➡ https://in.pinterest.com/EIDesign01/},
+	urldate = {2021-07-05},
 	author = {{EIDesign}},
-	urldate = {2021-07-05},
 }
 
-@video{sharepoint,
-	title = {Gamification for {SharePoint}: How to Boost Adoption and Productivity},
-	url = {https://www.youtube.com/watch?v=q4bkLvnYpRk},
+@misc{sharepoint,
+	title = {Gamification for {SharePoint}: {How} to {Boost} {Adoption} and {Productivity}},
 	shorttitle = {Gamification for {SharePoint}},
-	abstract = {Learn how you can boost adoption and productivity in {SharePoint} or Office 365 with gamification. To learn more, check out https://bit.ly/2Q0YjAR},
-	author = {{SharePoint Analytics}},
+	url = {https://www.youtube.com/watch?v=q4bkLvnYpRk},
+	abstract = {Learn how you can boost adoption and productivity in SharePoint or Office 365 with gamification. To learn more, check out https://bit.ly/2Q0YjAR},
 	urldate = {2021-07-05},
+	author = {{SharePoint Analytics}},
 }
 
-@online{modiran,
+@misc{modiran,
+    language = {persian},
 	title = {۱۰ مثال عالی از بازی سازی (گیمیفیکیشن) در کسب و کار {\textbar} مدیران ایران},
 	url = {https://modiriran.ir/10-%d9%85%d8%ab%d8%a7%d9%84-%d8%b9%d8%a7%d9%84%db%8c-%d8%a7%d8%b2-%d8%a8%d8%a7%d8%b2%db%8c-%d8%b3%d8%a7%d8%b2%db%8c-%da%af%db%8c%d9%85%db%8c%d9%81%db%8c%da%a9%db%8c%d8%b4%d9%86-%d8%af%d8%b1-%da%a9/},
 	abstract = {گیمیفیکیشن (بازی سازی) از مدت ها قبل با ما همراه بوده است و از آنجا که تنوع در آن زیاد است می توان عملا آن را در هر کسب و کاری بکار برد.},
+	language = {fa-IR},
 	urldate = {2021-07-05},
-	langid = {farsi},
+	author = {مدیران ایران},
 	note = {Section: مدیریت بازاریابی، تبلیغات و فروش},
 	file = {Snapshot:/home/thantez/Zotero/storage/N3XCN5HP/10-مثال-عالی-از-بازی-سازی-گیمیفیکیشن-در-ک.html:text/html},
-	language = {persian},
-}
-
-@online{mrg,
-	title = {بایگانی‌ها گیمیفیکیشن در منابع انسانی},
-	url = {https://www.mrgamification.com/category/%da%af%db%8c%d9%85%db%8c%d9%81%db%8c%da%a9%db%8c%d8%b4%d9%86-%d8%af%d8%b1-%d9%85%d9%86%d8%a7%d8%a8%d8%b9-%d8%a7%d9%86%d8%b3%d8%a7%d9%86%db%8c/},
-	titleaddon = {آقای گیمیفیکیشن},
-	urldate = {2021-07-05},
-	langid = {farsi},
-	file = {Snapshot:/home/thantez/Zotero/storage/IIV8AJF9/گیمیفیکیشن-در-منابع-انسانی.html:text/html},
-	language = {persian},
 }
 
 @incollection{review,
-	title = {Gamification in Business: A Review of the Studies},
+	title = {Gamification in {Business}: {A} {Review} of the {Studies}},
 	isbn = {978-3-030-52293-3},
-	pages = {53--73},
 	author = {Kalafatoğlu, Yaprak},
-	date = {2020-01-01},
+	month = jan,
+	year = {2020},
 	doi = {10.1007/978-3-030-52294-0_4},
+	pages = {53--73},
 }
 
 @book{actionable,
-	location = {[California]},
-	title = {Actionable Gamification : beyond points, badges, and leaderboards},
+	address = {[California]},
+	title = {Actionable {Gamification} : beyond points, badges, and leaderboards},
 	isbn = {978-1-5117-4404-1 1-5117-4404-9},
+	language = {English},
 	publisher = {Octalysis Media},
 	author = {Chou, Yu-Kai.},
-	date = {2015},
+	year = {2015},
+}
+
+@misc{eprimepic,
+	title = {Finding the {First} 10-digit {Prime} in (a {Billion}) {Digits} of e},
+	url = {https://www.hanshq.net/eprime.html},
+	urldate = {2021-07-06},
+	author = {Wennborg, Hans},
+}
+
+@misc{eprimesolve,
+	title = {The {Google} {Test}},
+	url = {https://www.jsoftware.com/papers/play211.htm},
+	urldate = {2021-07-06},
+	author = {McDonnell, Eugene},
+	file = {The Google Test:/home/thantez/Zotero/storage/UU3EKMIN/play211.html:text/html},
+}
+
+@misc{bluewolf,
+    language = {persian},
+	title = {حضور در فضای مجازی با {Bluewolf} ( استفاده از تجربیات آن)},
+	url = {https://www.mrgamification.com/bluewolf-gamification/},
+	abstract = {نمونه دیگری از گیمیفیکیشن در بازاریابی را بررسی می کنیم: Bluewolf. بازی ای برای ترغیب کارکنان یک شرکت به تبلیغ محصولات و خدمات آن شرکت.},
+	language = {fa-IR},
+	urldate = {2021-07-06},
+	journal = {آقای گیمیفیکیشن},
+	author = {یادگاری, ناهید},
+	month = sep,
+	year = {2017},
+	note = {Section: مثال گیمیفیکیشن},
+	file = {Snapshot:/home/thantez/Zotero/storage/S5MGGRVS/bluewolf-gamification.html:text/html},
+}
+
+@misc{kmanagement,
+    language = {persian},
+	title = {گیمیفیکیشن در مدیریت دانش ؛ چرا و چگونه؟ - آقای گیمیفیکیشن مرجع جامع آموزش گیمیفیکیشن},
+	url = {https://www.mrgamification.com/%da%af%db%8c%d9%85%db%8c%d9%81%db%8c%da%a9%db%8c%d8%b4%d9%86-%d8%af%d8%b1-%d9%85%d8%af%db%8c%d8%b1%db%8c%d8%aa-%d8%af%d8%a7%d9%86%d8%b4/},
+	abstract = {گیمیفیکیشن در مدیریت دانش باعث به وجود آمدن زمینه های جدیدی برای خلق و مخصوصا انتشار دانش می کند که با اهداف سازمانی همراستاست.},
+	language = {fa-IR},
+	urldate = {2021-07-06},
+	journal = {آقای گیمیفیکیشن},
+	author = {حاتمی, کامران},
+	month = oct,
+	year = {2017},
+	note = {Section: گیمیفیکیشن در منابع انسانی},
+	file = {Snapshot:/home/thantez/Zotero/storage/2ASMM75H/گیمیفیکیشن-در-مدیریت-دانش.html:text/html},
+}
+
+@misc{scenarios,
+    language = {persian},
+	title = {استخدام مبتنی بر گیمیفیکیشن ؛ بررسی نمونه های شکست},
+	url = {https://www.mrgamification.com/%d8%b4%da%a9%d8%b3%d8%aa-%da%af%db%8c%d9%85%db%8c%d9%81%db%8c%db%8c%d8%b4%d9%86-%d8%a7%d8%b3%d8%aa%d8%ae%d8%af%d8%a7%d9%85-%d9%85%d8%ab%d8%a7%d9%84/},
+	abstract = {در این مقاله به بررسی اشکالاتی که معمولا در پیاده سازی فرآیند استخدام مبتنی بر گیمیفیکیشن رخ می دهد می پردازیم و آن ها را شرح می دهیم.},
+	language = {fa-IR},
+	urldate = {2021-07-06},
+	journal = {آقای گیمیفیکیشن},
+	author = {صولت, فرانک},
+	month = nov,
+	year = {2018},
+	note = {Section: گیمیفیکیشن در منابع انسانی},
+	file = {Snapshot:/home/thantez/Zotero/storage/VE5M6C63/شکست-گیمیفییشن-استخدام-مثال.html:text/html},
+}
+
+@misc{rezayat,
+    language = {persian},
+	title = {رضایت شغلی با گیمیفیکیشن ! - آقای گیمیفیکیشن مرجع آموزش گیمیفیکیشن},
+	url = {https://www.mrgamification.com/%d8%b1%d8%b6%d8%a7%db%8c%d8%aa-%d8%b4%d8%ba%d9%84%db%8c/},
+	abstract = {رضایت شغلی یک موضوع بسیار مهم در شرایط امروز دنیای کار است پدیده ای که بسیار زیاد به عوامل متعدد بسیتگی دارد اما آیا گیمیفیکیشن می تواند آن را افزایش دهد؟},
+	language = {fa-IR},
+	urldate = {2021-07-06},
+	journal = {آقای گیمیفیکیشن},
+	author = {حاتمی, کامران},
+	month = may,
+	year = {2018},
+	note = {Section: گیمیفیکیشن در منابع انسانی},
+	file = {Snapshot:/home/thantez/Zotero/storage/2WY9FYLJ/رضایت-شغلی.html:text/html},
+}
+
+@misc{reghmosh,
+    language = {persian},
+	title = {رقابت یا مشارکت کدام یک در بحث مشارکت کارمندان موثرتر است؟},
+	url = {https://www.mrgamification.com/%d8%b1%d9%82%d8%a7%d8%a8%d8%aa-%db%8c%d8%a7-%d9%85%d8%b4%d8%a7%d8%b1%da%a9%d8%aa-%da%a9%d8%af%d8%a7%d9%85-%db%8c%da%a9-%d8%af%d8%b1-%d8%a8%d8%ad%d8%ab-%d9%85%d8%b4%d8%a7%d8%b1%da%a9%d8%aa-%da%a9%d8%a7/},
+	abstract = {یکی از مهم ترین سوالات برای طراحی گیمیفیکیشن کارکنان یا گیمیفیکیشن در منابع انسانی بحث مشارکت و یا رقابت در طراحی است که انتخاب آن به سادگی انجام نمی گیرد.},
+	language = {fa-IR},
+	urldate = {2021-07-06},
+	journal = {آقای گیمیفیکیشن},
+	author = {حاتمی, کامران},
+	month = apr,
+	year = {2019},
+	note = {Section: گیمیفیکیشن در منابع انسانی},
+	file = {Snapshot:/home/thantez/Zotero/storage/GME6N2HV/رقابت-یا-مشارکت-کدام-یک-در-بحث-مشارکت-کا.html:text/html},
+}
+
+@misc{poliver,
+    language = {persian},
+	title = {پلیبور وقتی کار و تفریح باهم اتفاق می‌افتند. - آقای گیمیفیکیشن مرجع آموزش گیمیفیکیشن},
+	url = {https://www.mrgamification.com/%d9%be%d9%84%db%8c%d8%a8%d9%88%d8%b1-%d9%88%d9%82%d8%aa%db%8c-%da%a9%d8%a7%d8%b1-%d9%88-%d8%aa%d9%81%d8%b1%db%8c%d8%ad-%d8%a8%d8%a7%d9%87%d9%85-%d8%a7%d8%aa%d9%81%d8%a7%d9%82-%d9%85%db%8c%e2%80%8c/},
+	abstract = {پلیبور به ترکیب کار و بازی گفته می شود که یک پدیده جدید است که در غرب بسیار به آن توجه می شود علت این توجه افزایش راندمان کارمندان است.},
+	language = {fa-IR},
+	urldate = {2021-07-06},
+	journal = {آقای گیمیفیکیشن},
+	author = {صولت, فرانک},
+	month = may,
+	year = {2019},
+	note = {Section: گیمیفیکیشن در منابع انسانی},
+	file = {Snapshot:/home/thantez/Zotero/storage/DNWG87YP/پلیبور-وقتی-کار-و-تفریح-باهم-اتفاق-می.html:text/html},
+}
+
+@misc{jumanji,
+    language = {persian},
+	title = {آموزش فرهنگ سازمانی با گیمیفیکیشن بر اساس جومانجی!},
+	url = {https://www.mrgamification.com/%d8%a2%d9%85%d9%88%d8%b2%d8%b4-%d9%81%d8%b1%d9%87%d9%86%da%af-%d8%b3%d8%a7%d8%b2%d9%85%d8%a7%d9%86%db%8c-%d8%a8%d8%a7-%da%af%db%8c%d9%85%db%8c%d9%81%db%8c%da%a9%db%8c%d8%b4%d9%86-%d8%a8%d8%b1-%d8%a7/},
+	abstract = {در این مقاله به بررسی آموزش فرهنگ سازمانی با یک گیمیفیکیشن مبتنی بر فیلم جومانجی می‌پردازیم که باعث می شود این فرآِند بسیار سریعتر شود.},
+	language = {fa-IR},
+	urldate = {2021-07-06},
+	journal = {آقای گیمیفیکیشن},
+	author = {شیروانی, علیرضا},
+	month = mar,
+	year = {2020},
+	note = {Section: گیمیفیکیشن در منابع انسانی},
+	file = {Snapshot:/home/thantez/Zotero/storage/EI4QA5YC/آموزش-فرهنگ-سازمانی-با-گیمیفیکیشن-بر-ا.html:text/html},
+}
+
+@misc{army,
+    language = {persian},
+    url = {https://www.mrgamification.com/gamification-in-business/},
+	title = {کاربرد ها و مثال های گیمیفیکیشن در کسب و کار {\textbar} آقای گیمیفیکیشن مرجع آموزش گیمیفیکیشن},
+	abstract = {در این مقاله به بررسی گیمیفیکیشن در کسب و کار و انواع کاربردهای آن برای حالت های متفاوت می پردازیم. از یک فرد عادی برای کسب و کار تا یک شرکت می پردازیم.},
+	language = {fa-IR},
+	urldate = {2021-07-06},
+	journal = {آقای گیمیفیکیشن},
+	author = {حاتمی, کامران},
+	month = aug,
+	year = {2017},
+	note = {Section: گیمیفیکیشن در کسب و کار},
+	file = {Snapshot:/home/thantez/Zotero/storage/GH7EGP9F/gamification-in-business.html:text/html},
+}
+
+@misc{eventful,
+	title = {How {US} {Army} {Uses} {Gamification} for {Recruitment}},
+	url = {https://www.youtube.com/watch?v=BKFZgnOuKF8&t=1s},
+	abstract = {Excerpt from Gabe Zichermann's session at HR Innovation \& Tech Fest 2018 \#HRTechFest},
+	urldate = {2021-07-06},
+	author = {{The Eventful Group}},
+}
+
+@misc{cbs,
+	title = {{US} {Military} using video games as recruitment tool},
+	url = {https://www.youtube.com/watch?v=hJRasQIdCzQ},
+	abstract = {US Military using video games as recruitment tool},
+	urldate = {2021-07-06},
+	author = {{CBS 17}},
+}
+
+@misc{domino,
+	title = {Domino's: {Pizza} {Hero} {\textbar} {UNIT9}},
+	url = {https://www.unit9.com/project/dominos-pizza-hero},
+	urldate = {2021-07-06},
+	file = {Domino's\: Pizza Hero | UNIT9:/home/thantez/Zotero/storage/5A96GZ7Y/dominos-pizza-hero.html:text/html},
+}
+
+@article{uhl,
+	title = {The {US} {Military} {Is} {Using} {Online} {Gaming} to {Recruit} {Teens}},
+	issn = {0027-8378},
+	url = {https://www.thenation.com/article/culture/military-recruitment-twitch/},
+	abstract = {Gamers with the Army, Navy, and Air Force are spending hours on Twitch with children as young as 13.},
+	language = {en-US},
+	urldate = {2021-07-06},
+	author = {Uhl, Jordan},
+	month = jul,
+	year = {2020},
+	keywords = {Drones, Military-industrial complex, US Military},
+}
+
+@misc{goingsocial,
+	title = {Enterprise {Gamification} {Case} {Study} – {Bluewolf}’s \#goingsocial {Portal}},
+	url = {https://learningpilgrims.wordpress.com/2013/10/14/enterprise-gamification-case-study-on-bluewolf/},
+	abstract = {Deloitte recently published an article on enterprise gamification. This article had case studies from three companies outlining their gamification strategies in the areas of customer support, emplo…},
+	language = {en},
+	urldate = {2021-07-06},
+	journal = {learningpilgrims},
+	month = oct,
+	year = {2013},
 }
